refactor: Use bootloader v0.11 and bindeps

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "blog_os"
+name = "kernel"
 version = "0.1.0"
 authors = ["Philipp Oppermann <dev@phil-opp.com>"]
-edition = "2018"
+edition = "2021"
+
+[[bin]]
+name = "kernel"
+test = false
+bench = false
 
 [[test]]
 name = "should_panic"
@@ -13,14 +18,17 @@ name = "stack_overflow"
 harness = false
 
 [dependencies]
-bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
+bootloader_api = "0.11.4"
 volatile = "0.2.6"
 spin = "0.5.2"
-x86_64 = "0.14.2"
+x86_64 = "0.14.8"
 uart_16550 = "0.2.0"
 pic8259 = "0.10.1"
 pc-keyboard = "0.5.0"
 linked_list_allocator = "0.9.0"
+log = "0.4.17"
+noto-sans-mono-bitmap = { version = "0.2.0", features = ["regular", "size_16", "unicode-basic-latin", "unicode-specials"], default-features = false }
+spinning_top = "0.2.4"
 
 [dependencies.lazy_static]
 version = "1.0"
@@ -32,17 +40,10 @@ default-features = false
 features = ["alloc"]
 
 [dependencies.conquer-once]
-version = "0.2.0"
+version = "0.3.2"
 default-features = false
 
 [dependencies.futures-util]
 version = "0.3.4"
 default-features = false
 features = ["alloc"]
-
-[package.metadata.bootimage]
-test-args = [
-    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
-    "-display", "none"
-]
-test-success-exit-code = 33         # (0x10 << 1) | 1
