--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -29,6 +29,7 @@ linked_list_allocator = "0.9.0"
 log = "0.4.17"
 noto-sans-mono-bitmap = { version = "0.2.0", features = ["regular", "size_16", "unicode-basic-latin", "unicode-specials"], default-features = false }
 spinning_top = "0.2.4"
+acpi = "4.1.1"
 
 [dependencies.lazy_static]
 version = "1.0"
