--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -30,6 +30,7 @@ log = "0.4.17"
 noto-sans-mono-bitmap = { version = "0.2.0", features = ["regular", "size_16", "unicode-basic-latin", "unicode-specials"], default-features = false }
 spinning_top = "0.2.4"
 acpi = "4.1.1"
+corundum = { features = ["no_std"], default-features = false, git = "https://github.com/imawizard/Corundum", branch = "no_std" }
 
 [dependencies.lazy_static]
 version = "1.0"
